Сделал фиксы после проверки дз
Заменил: 
<input type="name1" placeholder="Сообщение"> на <textarea name="name1" id="1" cols="10" rows="05" placeholder="Сообщение"></textarea> 
Заменил элементы li

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       
       <div class="main"><div class="title__conatainer"> 
          <h3>Что я умею</h3> 
-         <li>Веб-дизайн</li> 
+         <p><b>Веб-дизайн</b></p> 
          <p>Lorem ipsum dolor sit amet placerat
          <br>facilisis felis mi in tempus eleifend
          <br>pellentesque natoque etiam. </p>
@@ -129,7 +129,7 @@
    <h4>Оставьте мне сообщение</h4> 
    <input type="name1" placeholder="Имя"> 
    <input type="name1" placeholder="Email"> 
-   <input type="name1" placeholder="Сообщение">
+   <textarea name="name1" id="1" cols="10" rows="05" placeholder="Сообщение"></textarea>
     </div> 
       
       <div class="main"><div class="title__conatainer">
